# docs/swagger.yaml
@@ -393,6 +393,40 @@ paths:
       summary: Get service by id
       tags:
       - OuterService
+  /api/v1/transaction/cancel:
+    post:
+      description: Cancel reservation of the user's balance from another service
+      parameters:
+      - description: Reservation info
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.Reservation'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ReservationCancelled'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorResp'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ErrorResp'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/responses.ErrorResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ErrorResp'
+      summary: Cancel reservation of the user's balance
+      tags:
+      - Transaction
   /api/v1/transaction/release:
     post:
       description: Release of the user's balance to another service
@@ -464,7 +498,7 @@ paths:
       - Transaction
   /api/v1/transaction/reservation:
     post:
-      description: Cancel reservation of the user's balance from another service
+      description: Reservation of the user's balance from another service
       parameters:
       - description: Reservation info
         in: body
@@ -473,10 +507,10 @@ paths:
         schema:
           $ref: '#/definitions/dto.Reservation'
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
-            $ref: '#/definitions/responses.ReservationCancelled'
+            $ref: '#/definitions/responses.TransactionCreated'
         "400":
           description: Bad Request
           schema:
@@ -493,7 +527,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/responses.ErrorResp'
-      summary: Cancel reservation of the user's balance
+      summary: Reservation of the user's balance
       tags:
       - Transaction
   /api/v1/transaction/reservation/report:
